# simd-base64

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: benchmark.rs
src/: base64.rs  base64_simd.rs  common.rs  lib.rs
