[package]
name = "simd-base64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

# [profile.bench]
# rustflags = ["-C", "target-cpu=native"]

[[bench]]
name = "benchmark"
harness = false